--- a/src/components/ReviewItems/ReviewItems.css
+++ b/src/components/ReviewItems/ReviewItems.css
@@ -1,8 +1,20 @@
 .review-item  {
+    border: 3px solid goldenrod;
+    padding: 20px;
+    border-radius: 10px;
+    width: 500px;
+    display: flex;
+    margin:0 auto;
     margin-top: 30px;
+    
 }
 .review-item img{
-    width: 50%;
-    height: 200px;
-    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    border: 5px solid gray;
+    border-radius: 50%;
+}
+.rating{
+    color:red;
+    font-weight: 700;
 }
